Use fixture to get loans CIRC-596